dissag-cfg/k8s_cfg_upf/pcrf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-diss.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pcrf
  name: pcrf
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pcrf
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-diss.yml
        kompose.version: 1.21.0 (992df58d8)
        k8s.v1.cni.cncf.io/networks: '[{
            "name": "macvlan-conf",
            "ips": [ "192.168.50.23" ],
            "default-route": ["192.168.50.1"]
        }]'
      creationTimestamp: null
      labels:
        io.kompose.network/physical: "true"
        io.kompose.service: pcrf
    spec:
      containers:
      - name: pcrf
        command:
        - /bin/sh
        - /etc/open5gs/run_pcrf.sh
        image: registry.local:5000/config-diss-upf_pcrf:latest
        imagePullPolicy: "Always"
        name: open5gs-pcrf
        resources: {}
        volumeMounts:
        - mountPath: /etc/open5gs
          name: upf-cfg-claim0
      dnsPolicy: None
      dnsConfig:
        nameservers: ["172.30.2.4"]
        searches:
        - local
      hostname: pcrf
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: upf-cfg-claim0
        persistentVolumeClaim:
          claimName: upf-cfg-claim0
