dissag-cfg/k8s_cfg_upf/service-sgw.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: sgw
  name: sgw
  selfLink: /api/v1/namespaces/default/services/sgw
spec:
  ports:
  - name: port-1
    nodePort: 2123
    port: 2123
    protocol: UDP
    targetPort: 2123
  - name: port-2
    nodePort: 2152
    port: 2152
    protocol: UDP
    targetPort: 2152
  selector:
    io.kompose.service: sgw
  sessionAffinity: None
  type: LoadBalancer
