dissag-cfg/k8s_cfg_upf/nginx-ingress.yaml
kind: Ingress
apiVersion: v1
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  rules:
  - host: sgw.local
    gtp:
        backend:
          serviceName: sgw
          servicePort: 2152
      - path: /b
        backend:
          serviceName: sgw
          servicePort: 2123
---
